--- a/Manuscript.tex
+++ b/Manuscript.tex
@@ -130,9 +130,9 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={Interspecies comparisons of Mg/Ca ratios in limpet shells},
+  pdftitle={Confirmation of Mg/Ca ratios as palaeothermometers in Atlantic limpet shells},
   pdfauthor={Niklas Hausmann; Donna Surge; Ivan Briz-Godino},
-  pdfkeywords={Sclerochronology, Limpets, Elemental Ratio, Mg/Ca},
+  pdfkeywords={Sclerochronology, Patella, Nacella, LIBS, Mg/Ca},
   colorlinks=true,
   linkcolor={blue},
   filecolor={Maroon},
@@ -144,7 +144,8 @@
 \begin{document}
 
 \begin{frontmatter}
-\title{Interspecies comparisons of Mg/Ca ratios in limpet shells}
+\title{Confirmation of Mg/Ca ratios as palaeothermometers in Atlantic
+limpet shells}
 \author[1]{Niklas Hausmann%
 \corref{cor1}%
 }
@@ -165,7 +166,10 @@ Archäologie},addressline={Ludwig-Lindenschmit-Forum
 Carolina},addressline={104 South Road, 225 Geology
 Building},city={Chapel Hill,
 NC},country={US},countrysep={,},postcode={27599-3315},postcodesep={}}
-\affiliation[3]{organization={},country={Spain},countrysep={,},postcodesep={}}
+\affiliation[3]{organization={Department of Evolutionary Biology,
+Ecology and Environmental Science, Biodiversity Research Institute
+(IRBio), University of Barcelona},addressline={Avinguda Diagonal,
+643},city={Barcelona},country={Spain},countrysep={,},postcode={8028},postcodesep={}}
 
 \cortext[cor1]{Corresponding author}
 
@@ -173,26 +177,27 @@ NC},country={US},countrysep={,},postcode={27599-3315},postcodesep={}}
 
         
 \begin{abstract}
-This study provides a short reassessment of the use of Magnesium to
-Calcium (Mg/Ca) ratios in Atlantic limpet shells to determine past sea
-surface temperatures. While \emph{Patella vulgata} along the Spanish
-shoreline has since then repeatedly produced reliable correlations
-between sea surface temperature and Mg/Ca ratios, this is not the case
-for other patelloid species. \emph{Patella vulgata} and \emph{Nacella
-deaureata} have been studied using Mg/Ca with mixed or contrary results.
-In this study, we present elemental maps of various such species
-together with stable oxygen isotope values. Our dataset also includes
-specimens that were previously unsuccessful in providing significant
-correlations between \(\delta\)\textsuperscript{18}O and Mg/Ca ratios.
-By reassessing these previous specimens and including a wider range of
-modern and archaeological samples (n=12) from three patelloid species
-(\emph{P. vulgata}, \emph{N. deaureata}, and \emph{N. magellanica}) we
-further add to the growing set of evidence for the reliable use of Mg/Ca
-ratios to detect palaeotemperature change and serve as a means to
-determine ontogenetic age and season of capture as well as to reveal
-locations of interest within the growth record (i.e.~annual temperature
-minima and maxima) for the targeted analysis using
-\(\delta\)\textsuperscript{18}O or clumped oxygen isotope analysis.
+This study provides a reassessment of the use of Magnesium to Calcium
+(Mg/Ca) ratios in Atlantic limpet shells to determine past sea surface
+temperatures (SST). While \emph{Patella depressa} along the Spanish
+shoreline has repeatedly produced reliable correlations between SST and
+Mg/Ca ratios, this is not the case for other patelloid species.
+\emph{Patella vulgata}, \emph{Nacella deaureata}, and \emph{Nacella
+magellanica} have been studied using Mg/Ca with mixed or contrary
+results. In this study, we present elemental maps of various such
+species together with stable oxygen isotope values that confirm a good
+relationship with SST. Our dataset also reassesses a specimen which was
+previously unsuccessful in providing significant correlations between
+\(\delta\)\textsuperscript{18}O and Mg/Ca ratios. By reassessing these
+species and including modern and archaeological samples (n=12) from
+three patelloid species (\emph{P. vulgata}, \emph{N. deaureata}, and
+\emph{N. magellanica}) we further add to the growing set of evidence for
+the reliable use of Mg/Ca ratios to detect palaeotemperature change. As
+a result, these species can in the future serve as a means to determine
+ontogenetic age and season of capture as well as to reveal locations of
+interest within the growth record (i.e.~annual temperature minima and
+maxima) for the targeted analysis using \(\delta\)\textsuperscript{18}O
+or clumped oxygen isotope analysis.
 \end{abstract}
 
 
@@ -200,7 +205,7 @@ minima and maxima) for the targeted analysis using
 
 
 \begin{keyword}
-    Sclerochronology \sep Limpets \sep Elemental Ratio \sep 
+    Sclerochronology \sep Patella \sep Nacella \sep LIBS \sep 
     Mg/Ca
 \end{keyword}
 \end{frontmatter}
@@ -209,35 +214,36 @@ minima and maxima) for the targeted analysis using
 
 Limpet shells are commonly found within archaeological sites and and
 past shorelines due to their robust carbonate structure and the
-long-term use of limpets as a marine food source. They have successfully
-been studied in the past in the context of coastal subsistence
-economies, site occupation on seasonal
+long-term use of limpets as a marine food source \citep{Robson2023-oz}.
+They have successfully been studied in the past in the context of
+coastal subsistence economies, site occupation on seasonal
 \citep{Shackleton1973-ij, Parker2018-wf, Bosch2018-ud} or long-term
 scale \citep{Ortiz2015-mr}, as well as palaeotemperature
 \citep{Fenger2007-gf, Surge2012-ba, Wang2012-ee, Colonese2012-ct, Ferguson2011-zl}.
 Determining past sea surface temperature (SST) change largely relies on
 the measurement of \(\delta\)\textsuperscript{18}O-values within the
 calcitic parts of the shell, but attempts have been made to also use
-elemental ratios, such as magnesium to calcium (Mg/Ca), to have an
-alternative measure, that potentially provides a more accurate SST
-estimate than \(\delta\)\textsuperscript{18}O-values, which are also
-affected by changes in salinity. In addition, the data acquisition of
-elemental ratios --- either through
-laser-ablation-isotope-ratio-mass-spectrometry (LA-ICP-MS) or laser
-induced breakdown spectroscopy (LIBS), can be much faster and
-cost-effective, increasing the number of specimens that can be studied
-overall \citep{Durham2017-fh, Hausmann2023-ih}.
+elemental ratios, such as magnesium to calcium (Mg/Ca)
+\citep{Graniero2017-io, Ferguson2011-zl}, to have an alternative
+measure, that potentially provides a more accurate SST estimate than
+\(\delta\)\textsuperscript{18}O-values, which are also affected by
+changes in salinity. In addition, the data acquisition of elemental
+ratios --- either through laser-ablation-isotope-ratio-mass-spectrometry
+(LA-ICP-MS) or laser induced breakdown spectroscopy (LIBS), can be much
+faster and cost-effective, increasing the number of specimens that can
+be studied overall \citep{Durham2017-fh, Hausmann2023-ih}.
 
 Problematically, links between Mg/Ca ratios and SST changes in many
 marine mollusc shells, including limpets, have shown to be unreliable
-\citep{Surge2008-ri, Wanamaker2008-zl, Schone2010-yl, Freitas2012-tx, Graniero2015-zv, Poulain2015-dg, Vihtakari2017-wd}.
+\citep{Surge2008-ri, Wanamaker2008-zl, Schone2010-yl, Freitas2012-tx, Graniero2017-io, Poulain2015-dg, Vihtakari2017-wd}.
 This is particularly the case where there is little available additional
 information on metabolic processes, organic components of the shell
 matrix, intra-increment and intra-shell variability, and growth rates,
 which can independently and unpredictably affect Mg/Ca ratios and
-confound their interpretation as temperature proxy. Confusingly,
-multiple different temperature equations have been found for the same
-species (see \citep{Freitas2012-tx, Vihtakari2017-wd} and references
+confound their interpretation as temperature proxy. Confusingly, in some
+cases multiple different temperature equations have been found for the
+same species (see Freitas \emph{et al}. \citeyearpar{Freitas2012-tx} and
+Vihtakari \emph{et al}. \citeyearpar{Vihtakari2017-wd} and references
 therein). Coeval specimens sharing one locality can also show
 differences in their relation to SST \citep{Hausmann2019-fi}. Where the
 use of Mg/Ca as a palaeotemperature proxy was successful, anomalous
@@ -250,7 +256,7 @@ Mediterranean and Southwest Europe have provided promising results
 \citep{Hausmann2019-fi, Garcia-Escarzaga2015-jc, Garcia-Escarzaga2018-nf}.
 There remains a lack of clarity for Atlantic limpet species,
 particularly since it was last shown here, that they are not reliable
-recorders of palaeotemperature \citep{Graniero2015-zv}.
+recorders of palaeotemperature \citep{Graniero2017-io}.
 
 In this study we will repeat and expand the analysis of Atlantic limpets
 to determine the reliability of Mg/Ca ratios as palaeotemperature
@@ -260,29 +266,26 @@ contexts using LIBS. LIBS allows us to carry out 2D imaging of entire
 shell sections, which helps us to navigate the complex elemental
 structure of the shell and better separate the external,
 temperature-related changes from the internal and less understood
-factors that influence the Mg/Ca ratio.
-
-By relying and adding onto published datasets, we were able to
-simultaneously avoid costs for new high-resolution
-\(\delta\)\textsuperscript{18}O-data, to use real-world examples, and to
-also provide pilot-data for areas of existing research interest.
-Generally establishing the usefulness and reliability of Mg/Ca as SST
-proxy in limpets should help to provide a platform for future research
-and an important stepping stone to better understand elemental ratios in
-other marine mollusc shells.
+factors that influence the Mg/Ca ratio. By working with already
+published datasets, we were able to simultaneously avoid costs for new
+high-resolution \(\delta\)\textsuperscript{18}O-data, to use real-world
+examples, and to also provide pilot-data for areas of existing research
+interest. Generally establishing the usefulness and reliability of Mg/Ca
+as SST proxy in limpets should help to provide a platform for such
+future research and an important stepping stone to a better
+understanding of elemental ratios in other marine mollusc shells.
 
 \section{Materials and Methods}\label{Methods}
 
 \subsection{Limpet specimens}\label{limpet-specimens}
 
 The analysed specimens, their origin and respective studies with
-research background information can be found in
-Table\hyperref[Table_1]{1}. Here we will briefly summarise their
-contextual information, which can be accessed in more detail at the
-respective studies
-\citep{Nicastro2020-ih, Surge2012-ba, Graniero2017-io}. While those
-studies also included other specimens, their accessibility or state of
-preservation did not all lend them to be re-analysed.
+research background information can be found in Table
+\hyperref[Table_1]{1}. Here we will briefly summarise their contextual
+information, which can be accessed in more detail at the respective
+studies \citep{Nicastro2020-ih, Surge2012-ba, Graniero2017-io}. While
+those studies also included other specimens, their accessibility or
+state of preservation did not allow them to be re-analysed.
 
 \phantomsection\label{Table_1}
 \fontsize{8pt}{8pt}\selectfont
@@ -356,18 +359,20 @@ Bay - & QG1-7188-1 & Stable oxygen \\
 
 There are two main locations that we sourced specimens from: the Beagle
 Channel in Tierra del Fuego (Argentina) and the island of West Ray in
-Orkney (UK). Four specimens were collected from the Beagle Channel in
-Cambaceres Bay in October 2016. The area receives around 570 mm
-precipitation but the channel waters are predominantly influenced by
+Orkney (UK). Four modern specimens were collected from the Beagle
+Channel in Cambaceres Bay in October 2016. The area receives around 570
+mm precipitation but the channel waters are predominantly influenced by
 marine currents and in the period of October 2015 to October 2016 stayed
 around 30.7 ± 0.7 psu \citep{Nicastro2020-ih}. SSTs range from 4.7ºC in
-August to 10ºC in February.
+August to 10ºC in February (Figure~\ref{fig-SSTs} - red).
 
 On Westray one modern shell (ORK-LT5) was collected in Rack Wick Bay in
-August 2009. Westray lies about 70 km north of the Scottish mainland and
-experiences virtually no freshwater input with salinity values of 34.0
--- 34.5 psu \citep{Inall2009-ho}. The annual SST ranges from 6.3ºC in
-March to 13.8ºC in August (Figure~\ref{fig-SSTs}).
+August 2009 and has previously been analysed using stable carbon and
+oxygen isotopes, as well as LA-ICP-MS \citep{Graniero2017-io}. Westray
+lies about 70 km north of the Scottish mainland and experiences
+virtually no freshwater input with salinity values of 34.0 -- 34.5 psu
+\citep{Inall2009-ho}. The annual SST ranges from 6.3ºC in March to
+13.8ºC in August (Figure~\ref{fig-SSTs} - blue).
 
 \begin{figure}[H]
 
@@ -382,16 +387,14 @@ from years. SST values were sourced from \citet{Good2020-nl}.}
 
 \end{figure}%
 
-In total, we studied 7 archaeological specimens of \emph{P. vulgata}
-coming from Quoygrew on Westray dating to 900 -- 1200 CE. These shells
-have previously been studied to characterise seasonal temperature change
+We also studied 7 archaeological specimens of \emph{P. vulgata} coming
+from Quoygrew on Westray dating to 900 -- 1200 CE. These shells have
+previously been studied to characterise seasonal temperature change
 during the Medieval Climate Anomaly and the Little Ice Age
 \citep{Surge2012-ba}. Together they show a range of lifespans, with some
 comparatively long for their size (QG1-7246-1, 12 years within 16 mm of
 growth) making them particularly susceptible to time-averaging. That
-said, the majority are under 5 years old. These shells are an ideal
-comparative dataset from an archaeological assemblage to compare to the
-modern shell ORK\_LT5 \citep{Graniero2017-io}.
+said, the majority are under 5 years old.
 
 \subsection{Methods}\label{methods}
 
@@ -403,41 +406,30 @@ using previously published methods \citep{Hausmann2023-ih}. These
 involve the ablation of the shell section using an infrared (1064 nm)
 laser (1--2 mJ, 100 Hz) onto a surface area of 20--30 µm to generate a
 plasma plume. This plume emits light, which is measured using a
-synchronised spectrometer. The resulting light spectrum quantifies the
-emission lines of magnesium (MgII; 279.553 nm) and calcium (CaII;
-315.887 nm) to determine their intensity ratio. While these two peaks
-alone do not represent the molar concentrations of both elements (as
-opposed to calibration free LIBS; e.g.
-\citep{Martinez-Minchero2022-jz}), the intensity ratio is linearly
-correlated to the molar concentration \citep{Hausmann2017-oa} and can be
-used as a reliable indicator of Mg/Ca changes within the shell
-carbonate.
+synchronised spectrometer (delay time = 0.5 µs, integration time = 1
+µs). The resulting light spectrum quantifies the emission lines of
+Magnesium (MgII; 279.553 nm) and Calcium (CaII; 315.887 nm) to determine
+their intensity ratio. While these two peaks alone do not represent the
+molar concentrations of both elements (as opposed to calibration free
+LIBS; e.g. \citep{Martinez-Minchero2022-jz}), the intensity ratio is
+linearly correlated to the molar concentration \citep{Hausmann2017-oa}
+and can be used as a reliable indicator of Mg/Ca changes within the
+shell carbonate. All values reported here at in arbitrary units based on
+the ratio of intensities of the peaks above.
 
 Using this system we carried out elemental imaging of the shell
-specimens at a resolution of 50 µm distance between sampling spots. Each
-spot was irradiated 10 times with the 3 first spectra used for cleaning
-steps and the remaining summed to get an average Mg/Ca intensity ratio
-for each sample spot. Subsequently, we re-sampled the section using a
-line scan at 10 µm resolution. This leads to an overlap between sample
-spots, but also allows for a continuous record without gaps. Intensity
-ratios were filtered for cases with high relative standard deviation
-(i.e.~more than 10\%). These occurred in places where the previous
-sampling procedures for carbonate powder as part of the oxygen isotope
-analysis left an uneven sample surfaces introducing variability in the
-plasma generation and thus uncertainty in the data of these locations.
-
-\begin{figure}
-
-\centering{
-
-\includegraphics{Manuscript_files/figure-pdf/fig-Nac_iso-1.png}
-
-}
-
-\caption{\label{fig-Nac_iso}Isotope values of \emph{Nacella} sp. limpet
-shells from Cambaceres Bay.}
-
-\end{figure}%
+specimens at a resolution of 50--100 µm distance between sampling spots.
+Each spot was irradiated 10 times with the 3 first spectra discarded as
+a cleaning step and the remaining spectra summed to get an average Mg/Ca
+intensity ratio for each sample spot. Subsequently, we re-sampled the
+section using a line scan at 10 µm resolution. This leads to an overlap
+between sample spots, but also allows for a continuous record without
+gaps. Intensity ratios were filtered for cases with high relative
+standard deviation (i.e.~more than 10\%). These occurred in places where
+the previous sampling procedures for carbonate powder as part of the
+oxygen isotope analysis left an uneven sample surface introducing
+variability in the plasma generation and thus uncertainty in the data of
+these locations.
 
 \subsubsection{Oxygen isotopes}\label{oxygen-isotopes}
 
@@ -454,14 +446,29 @@ the isotope values was consistently at 0.05--0.10‰ and values are
 reported in per mil units (‰) relative to the VPDB (Vienna Pee Dee
 Belemnite) standard.
 
+\begin{figure}
+
+\centering{
+
+\includegraphics{Manuscript_files/figure-pdf/fig-Nac_iso-1.png}
+
+}
+
+\caption{\label{fig-Nac_iso}Isotope values of \emph{Nacella} sp. limpet
+shells from Cambaceres Bay.}
+
+\end{figure}%
+
 Figure~\ref{fig-Nac_iso} and Figure~\ref{fig-Pat_iso} show the
 previously acquired sequential \(\delta\)\textsuperscript{18}O-values of
-limpet shells by species. Due to the high sampling resolution, all
-shells show seasonally resolved and multi-year quasi-sinusoidal records
-of SST change , with \emph{Nacella} sp. shells living 2--3 years and
-\emph{Patella v}. regularly over 3 years. In those instances where
-longer lifetimes are encountered (i.e.~specimen QG1-7246-1,
-Figure~\ref{fig-Pat_iso} b).
+limpet shells by species (\emph{Nacella} sp., and \emph{Patella
+vulgata}, respectively. Due to the high sampling resolution, all shells
+show seasonally resolved and multi-year quasi-sinusoidal records of SST
+change, with \emph{Nacella} sp. shells living 2--3 years and \emph{P.
+vulgata} living regularly over 3 years. In those instances where longer
+lifetimes are encountered (i.e.~specimen QG1-7246-1,
+Figure~\ref{fig-Pat_iso} b) the temporal-resolution is reduced from more
+than a dozen of samples per year, to only around 7.
 
 \begin{figure}[H]
 
@@ -477,21 +484,11 @@ limpet shells from Quoygrew (QG, \emph{a-g}) and Rack Wick Bay (ORK,
 
 \end{figure}%
 
-Interestingly, the annual ranges in
-\(\delta\)\textsuperscript{18}O-values are not similar between the
-coeval \emph{Nacella} sp. specimens with \(\delta\)\textsuperscript{18}O
-values for the previous summer temperatures ranging from 0.4‰ to above
-1.0‰, and for winter values between 2.7‰ and 2.0‰. \emph{P. vulgata} has
-similarly variable \(\delta\)\textsuperscript{18}O-values for summer and
-winter seasons, alas the lack of more that one modern specimens, means
-that we cannot quantify the variability of recorded annual ranges
-between specimens.
-
 \subsection{Dynamic Time Warping}\label{dynamic-time-warping}
 
-Because the exact location used in the analysis of stable oxygen
-isotopes is not possible to reconstruct for each carbonate powder
-sample, we used dynamic time warping (DTW) to align the time series of
+Because it is not possible to directly associate the exact sample
+locations used in the analysis of stable oxygen isotopes with the LIBS
+data, we used dynamic time warping (DTW) to align the time series of
 \(\delta\)\textsuperscript{18}O-values and Mg/Ca ratios. DTW is an
 algorithm that measures similarity between two proxy-sequences, which
 may vary in sampling resolution or interval. By stretching or
@@ -523,8 +520,8 @@ m+3) as well as the layers that are interior (m-2)
 \citep{Fenger2007-gf}. The layer m-1, which is also interior, consists
 of aragonite and is seen in Figure~\ref{fig-Pat_LIBS} in grey, as its
 Mg/Ca intensity ratio consistently falls below the range of interest
-(0.2 and above). Compared to other patelloid shells, whose interior is
-almost entirely made of aragonite, this layer is very thin.
+(0.2 and above). Compared to other patelloid shells, some of whose
+interior is almost entirely made of aragonite, this layer is very thin.
 
 \begin{figure}[H]
 
@@ -565,11 +562,11 @@ Figure~\ref{fig-Pat_Comp} shows the line scan of ORK-LT5 in comparison
 to its \(\delta\)\textsuperscript{18}O-values (similar graphs for other
 specimen can be found in the supplementaries). The measurements of the
 distance to the shell edge are not entirely identical, most likely
-because one growth increment can have several different distances.
-Depending on where one measures the distance and a line scan towards the
-interior would be shorter than a line scan towards the exterior. That
-said, increases and decreases of both proxies seem to mirror each other
-and to be well aligned.
+because one growth increment can have a range of distances to the edge,
+depending on where one measures, and a line scan along the interior
+would be shorter than a line scan along the exterior. That said,
+increases and decreases of both proxies seem to mirror each other and to
+be well aligned.
 
 \begin{figure}
 
@@ -592,11 +589,12 @@ different but the majority (barring one: QG1-7246-1) do seem to cluster
 around shared parameters (\(\delta\)\textsuperscript{18}Ο = 0.6 -- 0.065
 * Mg/Ca). The various coefficients of determination
 (R\textsuperscript{2}) range between 0.81 (QG1-7246-1) and 0.95
-(QG1-7189-2). These specimens are also the oldest and youngest,
-respectively, specimens, suggesting that lower growth rates and time
+(QG1-7189-2). These specimens are also the oldest and youngest
+specimens, respectively, suggesting that lower growth rates and time
 averaging had a negative effect on the correlation of both proxies. The
-mean R\textsuperscript{2} value is 0.89, suggesting a generally good fit
-between the two proxies.
+mean R\textsuperscript{2} value of the individual \emph{P. vulgata}
+specimens is 0.89, suggesting a generally good fit between the two
+proxies.
 
 \begin{figure}
 
@@ -625,7 +623,7 @@ shell, further complicates their analysis compared to \emph{P. vulgata}
 or other \emph{Patella} species \citep{Hausmann2019-fi}. Nevertheless,
 repeating patterns were visible in the anterior section of the shell,
 which were also mirrored in the inner layers (m-2) of specimens
-NM-1016-3 (Figure~\ref{fig-Nac_LIBS} c).
+NM-1016-3 (Figure~\ref{fig-Nac_LIBS} b).
 
 \begin{figure}[H]
 
@@ -636,27 +634,26 @@ NM-1016-3 (Figure~\ref{fig-Nac_LIBS} c).
 }
 
 \caption{\label{fig-Nac_LIBS}Example LIBS maps and line scans of
-analysed specimens. (\emph{a+b}) ND-1016-3 and (\emph{c}+\emph{d})
-NM-1016-3. Note that the ranges of Mg/Ca intensity ratios are not
-identical but are chosen arbitrarily to increase contrast. Areas in grey
-consist of low-Mg aragonite and fall outside the chosen colour-range.
-Note the inset in (\emph{c}) where the shell edge has been resampled
-using a higher resolution (50 µm instead of 100 µm) to better understand
-the Mg/Ca ratios at the shell edge.}
+analysed \emph{Nacella} sp. specimens. (\emph{a+c}) ND-1016-3 and
+(\emph{b}+\emph{d}) NM-1016-3. Note that the ranges of Mg/Ca intensity
+ratios are not identical but are chosen arbitrarily to increase
+contrast. Areas in grey consist of low-Mg aragonite and fall outside the
+chosen colour-range. Note the inset in (\emph{c}) where the shell edge
+has been resampled using a higher resolution (50 µm instead of 100 µm)
+to better understand the Mg/Ca ratios at the shell edge.}
 
 \end{figure}%
 
 Interestingly, the Mg/Ca intensity ratios in the \emph{Nacella} sp.
 shells were much lower (0.05--0.30) than those seen in other patelloid
-species (e.g.~0.3--0.7 in \emph{Patella vulgata} above, or 0.5--1.5 in )
-using the same emission lines. This is particularly visible in
-Figure~\ref{fig-Nac_LIBS} c, where Mg/Ca intensity ratios range from
-\textasciitilde0.5--0.7 in \citep{Hausmann2023-ih}). While the intensity
-ratio depends chiefly on the chosen emission lines to calculate the
-proportion of the chosen Magnesium to the Calcium peak, the low ratios
-still indicate lower concentrations than seen elsewhere, or seen only in
-aragonitic parts of e.g.~\emph{Patella} shells. Similar observations
-have been made before \citep{Graniero2017-io}.
+species (e.g.~0.3--0.7 in \emph{Patella vulgata} above, or 0.5--1.5 in
+Hausmann \emph{et al}. \citeyearpar{Hausmann2023-ih}) using the same
+emission lines. While the intensity ratio depends chiefly on the chosen
+emission lines to calculate the proportion of the chosen Magnesium to
+the chosen Calcium peak, the low ratios still indicate lower
+concentrations than seen elsewhere, or seen only in aragonitic parts of
+e.g.~\emph{Patella} shells. Similar observations have been made before
+\citep{Graniero2017-io}.
 
 Line scans reflect well the changes previously indicated by
 \(\delta\)\textsuperscript{18}O values and also indicate about two years
@@ -739,11 +736,11 @@ Mg/Ca ratios in increments with rich organic contents
 \fontsize{8pt}{8pt}\selectfont
 
 \begin{longtable}[]{@{}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1389}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.2083}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1667}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1389}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.3472}}@{}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1806}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1806}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1806}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1806}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.2778}}@{}}
 \caption{Table showing correlations of Mg/Ca and
 \(\delta\)\textsuperscript{18}O found in other studies. * indicates that
 only SST data and no other geochemical data was used. ** these samples
@@ -793,7 +790,7 @@ Study
 & & FRMPC1 & 0.84 & \\
 & & FRMPC2 & 0.96 & \\
 & Libya & MO31A & 0.83 & \\
-& & MP64A & 0.33 & \\
+& & \textbf{MP64A} & 0.33 & \\
 & & MP67A & 0.96 & \\
 & & MP68A & 0.81 & \\
 & Malta & MA10 & 0.82 & \\
@@ -803,7 +800,8 @@ Study
 & & ANTPC2 & 0.93 & \\
 & & KIZPC1 & 0.94 & \\
 & & KIZPC2 & 0.86 & \\
-\emph{P. rustica} & Gibraltar & JL1 & 0.02 & \citep{Ferguson2011-zl} \\
+\emph{P. rustica} & Gibraltar & \textbf{JL1} & 0.02 &
+\citep{Ferguson2011-zl} \\
 & & JL2 & 0.8** & \\
 \emph{P. caerulea} & Gibraltar & JM00 & 0.69** & \\
 & & JM30 & 0.83** & \\
